--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
 		"@emotion/styled": "^11.14.0",
 		"@mui/icons-material": "^6.2.1",
 		"@mui/material": "^6.2.1",
+		"axios": "^1.7.9",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-query": "^3.39.3",
 		"react-router-dom": "^7.0.2"
 	},
 	"devDependencies": {
@@ -23,11 +25,14 @@
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react": "^4.3.4",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^9.15.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.14",
 		"globals": "^15.12.0",
+		"postcss": "^8.4.49",
 		"prettier": "^3.4.2",
+		"tailwindcss": "^3.4.17",
 		"typescript": "~5.6.2",
 		"typescript-eslint": "^8.15.0",
 		"vite": "^6.0.1"
